--- a/android/build.gradle
+++ b/android/build.gradle
@@ -31,6 +31,6 @@ repositories {
 }
 
 dependencies {
-    compile 'com.facebook.react:react-native:+'
+  compile 'com.facebook.react:react-native:+'
+  implementation files('libs/fit.jar')
 }
-  
