--- a/android/build.gradle
+++ b/android/build.gradle
@@ -32,5 +32,5 @@ repositories {
 
 dependencies {
   compile 'com.facebook.react:react-native:+'
-  implementation files('libs/fit.jar')
+  //implementation files('libs/fit.jar')
 }
